--- a/index.html
+++ b/index.html
@@ -69,8 +69,58 @@
         
 
             <div class="Row sectionMid">
-                <div class="">
-
+                <div class="container"> 
+                    <div class="row" >
+                        <div class="col" style="border-bottom: 1px solid black;margin-left: 30px;margin-right: 30px;">row1</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-3" style="margin-left: 33px;margin-right: 30px;">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">üst resim</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">alt resim</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="container">
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div class="col">solbilgi</div>
+                                    <div class="col">sağbilgi</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -82,6 +132,10 @@
         </div>
         
     </section>
+
+    <footer>
+        footerPart
+    </footer>
 
 
 
