--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="row SecondRow">
-                        <div class="col-3 col-md-4 leftPart" >
+                        <div class=".col-xl-5 col-md-4 col leftPart" >
                             <div class="container">
                                 <div class="row">
                                     <div class="col">
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-8 col-md-6 rightPart">
+                        <div class="col-xl-7 col-md-6 col rightPart">
                             <div class="container">
                                 <div class="d-flex justify-content-between row1">
                                     <div class="col leftInfo1">Araç Tutarı</div>
