Template is added with last version

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="col-xl-7 col-md-6 col rightPart">
-                            <div class="container">
+                            <div class="container contTest">
                                 <div class="d-flex justify-content-between row1">
                                     <div class="col leftInfo1">Araç Tutarı</div>
                                     <div class="col rightInfo1">350.000,00 ₺</div>
