--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                                         
                                             <div class="row">
                                                 <div class="col">
+                                                    <span  class="imgInside"><img src="./img/Araba.com - Logo.jpg" alt="audi"></span>
                                                     <img src="./img/audi.jpg" alt="audi" class="imgFirst">
                                             </div>
                                           
