--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="row SecondRow">
-                        <div class=".col-xl-5 col-md-4 col leftPart" >
+                        <div class="col-xl-3 col-md-4 col leftPart" >
                             <div class="container">
                                 <div class="row">
                                     <div class="col">
@@ -91,7 +91,7 @@
                                         
                                             <div class="row">
                                                 <div class="col">
-                                                    <span  class="imgInside"><img src="./img/Araba.com - Logo.jpg" alt="audi"></span>
+                                                    <span  class="imgInside"><img src="./img/Araba.com - Logo.png" alt="audi"></span>
                                                     <img src="./img/audi.jpg" alt="audi" class="imgFirst">
                                             </div>
                                           
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-7 col-md-6 col rightPart">
+                        <div class="col-xl-8 col-md-6 col rightPart">
                             <div class="container contTest">
                                 <div class="d-flex justify-content-between row1">
                                     <div class="col leftInfo1">Araç Tutarı</div>
